--- a/style.css
+++ b/style.css
@@ -1,74 +1,121 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+@font-face {
+  font-family: "Score Board";
+  src: url('https://cdn.jsdelivr.net/gh/dteirney/trains.maxx.co.nz/fonts/scoreboard/scoreboard-webfont.eot');
+  src: url('https://cdn.jsdelivr.net/gh/dteirney/trains.maxx.co.nz/fonts/scoreboard/scoreboard-webfont.eot') format('embedded-opentype'),
+       url('https://cdn.jsdelivr.net/gh/dteirney/trains.maxx.co.nz/fonts/scoreboard/scoreboard-webfont.woff') format('woff'),
+       url('https://cdn.jsdelivr.net/gh/dteirney/trains.maxx.co.nz/fonts/scoreboard/scoreboard-webfont.ttf') format('truetype'),
+       url('https://cdn.jsdelivr.net/gh/dteirney/trains.maxx.co.nz/fonts/scoreboard/scoreboard-webfont.svg') format('svg');
+}
+@font-face {
+  font-family: "againtsregular";
+  src: url('https://cdn.jsdelivr.net/gh/max-barry/demo.vhs/src/fonts/againts-webfont.eot');
+  src: url('https://cdn.jsdelivr.net/gh/max-barry/demo.vhs/src/fonts/againts-webfont.eot') format('embedded-opentype'),
+       url('https://cdn.jsdelivr.net/gh/max-barry/demo.vhs/src/fonts/againts-webfont.woff') format('woff'),
+       url('https://cdn.jsdelivr.net/gh/max-barry/demo.vhs/src/fonts/againts-webfont.ttf') format('truetype'),
+       url('https://cdn.jsdelivr.net/gh/max-barry/demo.vhs/src/fonts/againts-webfont.svg') format('svg');
+}
+
 html * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: 'Oswald', sans-serif;
+}
+
+.Scoreboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: "Score Board", sans-serif;
+    text-align: center;
+    background: #2c2c2c;
+    color: #fd8049;
+    text-shadow: 0 0 3px #fd8049;
+    padding: 1rem 0;
+    
+}
+
+.Scoreboard>h1 {
+  display: inline-block;  
+  margin: 0;
+  text-align: center;
+}
+
+.teamStats {
+  display: inline-block;
+  width: 150px;
+  height: 100px;
+  margin: 0px;
+  padding: 10px;
+ 
+}
+
+.teamStats h3 {
+    margin: 10px;
+}
+
+.scoreboardStats {
+    display: flex;
+    justify-content: space-around;
+}
+.Game h2{
+    text-align: center;
+}
+.Team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 30rem;
+}
+
+.Team .identity {
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .Team img {
-    max-width: 200px;
+  max-width: 200px;
 }
-
-.Team {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 30rem;
-  }
-
-.Team .identity {
-    height: 15rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
 
 .stats {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    
-  }
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
 .versus {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .versus h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 500%;
-    color:rgb(246, 191, 9);
-    text-shadow: 2px 2px 0 black;
-    font-style: italic;
-  }
+  font-family: againtsregular, oswald, sans-serif;
+  font-size: 500%;
+  color: #fc0;
+  text-shadow: 2px 2px 0 black;
+}
 
 button {
-    display: block;
-    margin-top: 1rem;
-    width: 100%;
-    padding: 0.5rem;
-    background-color:blue;
-    border: 0;
-    font-family: Oswald, sans-serif;
-    text-transform: uppercase;
-    font-size: 1.2em;
-    color: aliceblue;
-    box-shadow: 2px 2px 0 black;
-}
-.name {
-    font-family: impact, fantasy;
-    font-size: large;
-    font-weight: 900;
-    
-}
-.Game h1{
-    
-    text-align: center;
+  display: block;
+  margin-top: 1rem;
+  width: 100%;
+  padding: 0.5rem;
+  background-color: blue;
+  border: 0;
+  border-radius: 5%;
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  box-shadow: 2px 2px 0 black;
+  color: aliceblue;
 }
